--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -202,6 +202,7 @@
     <Compile Include="DTO\LoyaltyMate\VoucherInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionResponse.cs" />
+    <Compile Include="DTO\OnlineOrdering\DBOrders\FileReader.cs" />
     <Compile Include="DTO\OnlineOrdering\MenuModels\CourseInfo.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDB.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\OnlineOrderDBConnection.cs" />
