Branch_MM-RemoveCode code pushed.

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -128,7 +128,7 @@
             <add baseAddress="http://localhost:8745/MenumateServices/AdyenService/" />
           </baseAddresses>
         </host>
-      </service>      
+      </service>
       <service behaviorConfiguration="ServicePaymentSenseBehavior" name="MenumateServices.WCFServices.WCFServicePaymentSense">
         <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServicePaymentSense" contract="MenumateServices.WCFServices.IWCFServicePaymentSense">
           <identity>
@@ -139,6 +139,19 @@
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8746/MenumateServices.WCFServices/WCFServicePaymentSense/" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service behaviorConfiguration="ServiceMewsBehavior" name="MenumateServices.WCFServices.MewsIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceMews" contract="MenumateServices.WCFServices.IMewsIntegrationWebService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8747/MenumateServices/MewsService/" />
           </baseAddresses>
         </host>
       </service>
@@ -189,10 +202,15 @@
           <serviceMetadata httpGetEnabled="true" />
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>        
+        </behavior>
         <behavior name="ServicePaymentSenseBehavior">
           <serviceMetadata httpGetEnabled="true" />
-		  <useRequestHeadersForMetadataAddress />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+        <behavior name="ServiceMewsBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
@@ -313,10 +331,11 @@
       <provider invariantName="FirebirdSql.Data.FirebirdClient" type="FirebirdSql.Data.EntityFramework6.FbProviderServices, EntityFramework.Firebird" />
     </providers>
   </entityFramework>
-  
-<system.data>
-		<DbProviderFactories>
-			<remove invariant="FirebirdSql.Data.FirebirdClient" />
-			<add name="FirebirdClient Data Provider" invariant="FirebirdSql.Data.FirebirdClient" description=".NET Framework Data Provider for Firebird" type="FirebirdSql.Data.FirebirdClient.FirebirdClientFactory, FirebirdSql.Data.FirebirdClient" />
-		</DbProviderFactories>
-	</system.data></configuration>
+
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="FirebirdSql.Data.FirebirdClient" />
+      <add name="FirebirdClient Data Provider" invariant="FirebirdSql.Data.FirebirdClient" description=".NET Framework Data Provider for Firebird" type="FirebirdSql.Data.FirebirdClient.FirebirdClientFactory, FirebirdSql.Data.FirebirdClient" />
+    </DbProviderFactories>
+  </system.data>
+</configuration>
