Branch_MM-126023 code commit

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -155,6 +155,19 @@
           </baseAddresses>
         </host>
       </service>
+      <service behaviorConfiguration="ServiceAustriaBehavior" name="MenumateServices.WCFServices.AustriaFiscalIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceAustria" contract="MenumateServices.WCFServices.IAustriaFiscalIntegrationWebService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8748/MenumateServices/AustriaService/" />
+          </baseAddresses>
+        </host>
+      </service>    
     </services>
     <behaviors>
       <serviceBehaviors>
@@ -213,6 +226,11 @@
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
+        <behavior name="ServiceAustriaBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>      
       </serviceBehaviors>
     </behaviors>
     <bindings>
