--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Internal Classes\LoyaltyMate\LoyaltySite.cs" />
     <Compile Include="Internal Classes\LoyaltyMate\LoyaltyVoucher.cs" />
     <Compile Include="MenumateRunners\AdeynServiceRunner.cs" />
+    <Compile Include="MenumateRunners\AustriaFiscalServiceRunner.cs" />
     <Compile Include="MenumateRunners\MewsIntegrationServiceRunner.cs" />
     <Compile Include="MenumateRunners\PaymentSenseRunner.cs" />
     <Compile Include="MenumateRunners\SiHotIntegrationServiceRunner.cs" />
@@ -246,6 +247,12 @@
     </Compile>
     <Compile Include="MenumateServiceAdyenIntegration.Designer.cs">
       <DependentUpon>MenumateServiceAdyenIntegration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenumateServiceAustriaIntegration.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="MenumateServiceAustriaIntegration.Designer.cs">
+      <DependentUpon>MenumateServiceAustriaIntegration.cs</DependentUpon>
     </Compile>
     <Compile Include="MenumateServiceMewsIntegration.cs">
       <SubType>Component</SubType>
@@ -387,7 +394,9 @@
     <Compile Include="Tools\ServiceLogger.cs" />
     <Compile Include="Tools\ServiceNameManager.cs" />
     <Compile Include="WCFServices\AdyenIntegrationWebService.cs" />
+    <Compile Include="WCFServices\AustriaFiscalIntegrationWebService.cs" />
     <Compile Include="WCFServices\IAdyenIntegrationWebService.cs" />
+    <Compile Include="WCFServices\IAustriaFiscalIntegrationWebService.cs" />
     <Compile Include="WCFServices\IMewsIntegrationWebService.cs" />
     <Compile Include="WCFServices\IPocketVoucherWebService.cs" />
     <Compile Include="WCFServices\ISalesForceIntegrationWebService.cs" />
@@ -440,6 +449,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\AustriaFiscalIntegration\AustriaFiscalIntegration.csproj">
+      <Project>{1EAF92B4-EE32-45E5-94BD-D01A4964B530}</Project>
+      <Name>AustriaFiscalIntegration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Loyaltymate\Loyaltymate.csproj">
       <Project>{5926EAF0-F930-4522-8EDE-E27F76E109C7}</Project>
       <Name>Loyaltymate</Name>
