Branch_MM-131921 - Done the changes in code for sending the Store Ticket post when the newly created setting is enabled

--- a/MenuMate/Services/ServicesApp/SiHotIntegration/SiHotIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/SiHotIntegration/SiHotIntegration.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\StoreTicketDetails.cs" />
     <Compile Include="Domain\SiHotPayment.cs" />
     <Compile Include="Domain\SiHotService.cs" />
     <Compile Include="SiHotCommunicationController.cs" />
