Branch_MM-131458 service hosted and api vew models in progress.

--- a/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
+++ b/MenuMate/Services/ServicesApp/Loyaltymate/Loyaltymate.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Model\PointQuery.cs" />
     <Compile Include="Model\PointsDetail.cs" />
     <Compile Include="Model\PointsTransactionViewModel.cs" />
+    <Compile Include="Model\RegistrationModels\ApiLicenseSetting.cs" />
+    <Compile Include="Model\RegistrationModels\ApiTerminalViewModel.cs" />
     <Compile Include="Model\TierLevelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sevices\ILoyaltymateService.cs" />
