--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -167,7 +167,21 @@
             <add baseAddress="http://localhost:8748/MenumateServices/AustriaService/" />
           </baseAddresses>
         </host>
-      </service>    
+      </service>
+      <service behaviorConfiguration="ServiceRegistrationBehavior" name="MenumateServices.WCFServices.RegistrationIntegrationWebService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicHttpBindingConfiguration" name="basicHttpBinding_ServiceRegistration" contract="MenumateServices.WCFServices.IRegistrationIntegrationWebService">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8749/MenumateServices/RegistrationService/" />
+          </baseAddresses>
+        </host>
+      </service>
+
     </services>
     <behaviors>
       <serviceBehaviors>
@@ -230,7 +244,12 @@
           <serviceMetadata httpGetEnabled="true" />
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>      
+        </behavior>
+        <behavior name="ServiceRegistrationBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
       </serviceBehaviors>
     </behaviors>
     <bindings>
