--- a/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
@@ -69,9 +69,7 @@
     <Compile Include="ViewModels\ApiLicenseSetting.cs" />
     <Compile Include="ViewModels\ApiTerminalViewModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
