--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -206,8 +206,8 @@
     <Compile Include="DTO\LoyaltyMate\VoucherInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionInfo.cs" />
     <Compile Include="DTO\LoyaltyMate\VoucherTransactionResponse.cs" />
+    <Compile Include="DTO\MenumateRegistration\CompanySiteModelResponse.cs" />
     <Compile Include="DTO\MenumateRegistration\LicenseSettingModel.cs" />
-    <Compile Include="DTO\MenumateRegistration\RegistrationWebResponse.cs" />
     <Compile Include="DTO\MenumateRegistration\RegistrationResponse.cs" />
     <Compile Include="DTO\MenumateRegistration\TerminalModel.cs" />
     <Compile Include="DTO\OnlineOrdering\DBOrders\FileReader.cs" />
