--- a/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Exceptions\GUIDNotFoundException.cs" />
     <Compile Include="Exceptions\LoyaltymateOperationException.cs" />
     <Compile Include="Exceptions\MultipleGUIDException.cs" />
+    <Compile Include="Models\ApiCompanySiteViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sevices\IRegistrationIntegrationService.cs" />
     <Compile Include="Sevices\RegistrationIntagrationService.cs" />
@@ -61,7 +62,6 @@
     <Compile Include="Utility\JsonUtility.cs" />
     <Compile Include="Utility\WebUtility.cs" />
     <Compile Include="Models\ApiLicenseSetting.cs" />
-    <Compile Include="Models\ApiRegistrationResponse.cs" />
     <Compile Include="Models\ApiTerminalViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
