--- a/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
@@ -50,9 +50,9 @@
   <ItemGroup>
     <Compile Include="Exceptions\AuthenticationFailedException.cs" />
     <Compile Include="Exceptions\CustomException.cs" />
-    <Compile Include="Exceptions\GUIDNotFoundException.cs" />
-    <Compile Include="Exceptions\LoyaltymateOperationException.cs" />
-    <Compile Include="Exceptions\MultipleGUIDException.cs" />
+    <Compile Include="Exceptions\NoSettingChangeException.cs" />
+    <Compile Include="Exceptions\RegistrationUpdateException.cs" />
+    <Compile Include="Exceptions\BadRequestException.cs" />
     <Compile Include="Models\ApiCompanySiteViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sevices\IRegistrationIntegrationService.cs" />
