--- a/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
+++ b/MenuMate/Services/ServicesApp/RegistrationIntegration/RegistrationIntegration.csproj
@@ -51,6 +51,8 @@
     <Compile Include="Exceptions\AuthenticationFailedException.cs" />
     <Compile Include="Exceptions\CustomException.cs" />
     <Compile Include="Exceptions\NoSettingChangeException.cs" />
+    <Compile Include="Exceptions\NotAccessibleException.cs" />
+    <Compile Include="Exceptions\NotFoundException.cs" />
     <Compile Include="Exceptions\RegistrationUpdateException.cs" />
     <Compile Include="Exceptions\BadRequestException.cs" />
     <Compile Include="Models\ApiCompanySiteViewModel.cs" />
