Branch_MM-WaiterAppServiceSplit : Done changes to create new service, also imported the same in POS

--- a/MenuMate/Services/ServicesApp/MenumateServices/App.config
+++ b/MenuMate/Services/ServicesApp/MenumateServices/App.config
@@ -181,7 +181,19 @@
           </baseAddresses>
         </host>
       </service>
-
+      <service behaviorConfiguration="ServiceOnlineOrderingBehavior" name="MenumateServices.WCFServices.WCFServiceOnlineOrdering">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="longTimeoutHttpBindingConfiguration" name="basicHttpBinding_ServiceOnlineOrdering" contract="MenumateServices.WCFServices.IWCFServiceOnlineOrdering">
+          <identity>
+            <dns value="localhost" />
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8750/MenumateServices/OnlineOrdering/" />
+          </baseAddresses>
+        </host>
+      </service>
     </services>
     <behaviors>
       <serviceBehaviors>
@@ -246,6 +258,11 @@
           <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
         <behavior name="ServiceRegistrationBehavior">
+          <serviceMetadata httpGetEnabled="true" />
+          <useRequestHeadersForMetadataAddress />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+        <behavior name="ServiceOnlineOrderingBehavior">
           <serviceMetadata httpGetEnabled="true" />
           <useRequestHeadersForMetadataAddress />
           <serviceDebug includeExceptionDetailInFaults="true" />
