--- a/SignalR/Client/SystemTrayApp/app.config
+++ b/SignalR/Client/SystemTrayApp/app.config
@@ -7,11 +7,26 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="basicHttpBinding_ServiceLoyaltyMate" />
+        <binding name="basicHttpBinding_ServiceOnlineOrdering" closeTimeout="00:01:00"
+          openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+          allowCookies="false" bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+          maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+          messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+          useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+            maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+          <security mode="None">
+            <transport clientCredentialType="None" proxyCredentialType="None"
+              realm="" />
+            <message clientCredentialType="UserName" algorithmSuite="Default" />
+          </security>
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:8734/MenumateServices/LoyaltyMate/" binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_ServiceLoyaltyMate" contract="OnlineOrdering.IWCFServiceLoyaltyMate" name="basicHttpBinding_ServiceLoyaltyMate" />
+      <endpoint address="http://localhost:8750/MenumateServices/OnlineOrdering/"
+        binding="basicHttpBinding" bindingConfiguration="basicHttpBinding_ServiceOnlineOrdering"
+        contract="OnlineOrdering.IWCFServiceOnlineOrdering" name="basicHttpBinding_ServiceOnlineOrdering" />
     </client>
   </system.serviceModel>
   <entityFramework>
