Branch_MM-WaiterAppServiceSplit: worked on the Payment insertion in V6 db

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -182,6 +182,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillAttributes.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillPayAttributes.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArchiveAttributes.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcOrderTaxesAttributes.cs" />
+    <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\SecurityAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\LoyaltyOOResponse.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOLoyaltyResponse.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\OOLoyaltyResponsive.cs" />
