Branch_MM-WaiterAppServiceSplit : Done view model changes

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -182,6 +182,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\Enum\OrderStatus.cs" />
+    <Compile Include="DTO\Enum\PaymentType.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillPayAttributes.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArchiveAttributes.cs" />
