Branch_MM-WaiterAppServiceSplit: Done changes for updating new columns added in DayArBill table

--- a/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
+++ b/MenuMate/Services/ServicesApp/MenumateServices/MenumateServices.csproj
@@ -182,6 +182,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DTO\Enum\AppType.cs" />
     <Compile Include="DTO\Enum\OrderStatus.cs" />
     <Compile Include="DTO\Enum\PaymentType.cs" />
     <Compile Include="DTO\MenumateOnlineOrdering\DBOrders\DayArcBillAttributes.cs" />
